--- a/static/style.css
+++ b/static/style.css
@@ -57,7 +57,8 @@ body
 
 section
 {
-	max-width: 800px;
+	max-width: 860px;
+	margin: 12px;
 }
 
 section h3
@@ -87,7 +88,4 @@ section p, section form
 a{color: #333333;}
 a:hover{text-decoration: none;}
 
-table{
-	border: 1px solid #000000;
-	background-color: #F2F2F2;
-}
+
