--- a/static/kickstart.css
+++ b/static/kickstart.css
@@ -205,9 +205,9 @@ table{width:100%;margin:0 0 10px 0;text-align:left;border-collapse: collapse;}
 	
 /* striped */
 table.striped{}
-	table.striped tr.alt{background:#f5f5f5;}
-	table.striped thead th{background:#fff;}
-	table.striped tbody th{background:#f5f5f5;text-align:right;padding-right:15px;border-right:1px dotted #e5e5e5;}
+	table.striped tr.alt{background:#2E2E2E;}
+	table.striped thead th{background:#0B243B;}
+	table.striped tbody th{background:#2E2E2E;text-align:right;padding-right:15px;border-right:1px dotted #e5e5e5;}
 	table.striped tbody tr.alt th{background:#efefef;}
 
 /* tight */
@@ -217,7 +217,7 @@ table.tight{}
 /* sortable */
 table.sortable{border:1px solid #ddd;}
 	table.sortable thead th{cursor: pointer;position:relative;top:0;left:0;border-right:1px solid #ddd;}
-	table.sortable thead th:hover{background:#efefef;}
+	table.sortable thead th:hover{background:#0080FF;}
 	table.sortable span.arrow{border-style:solid;border-width:5px;
 	display:block;position:absolute;top:50%;right:5px;font-size:0;
 	border-color:#ccc transparent transparent transparent;
